app/packs/stylesheets/_header.sass
.user-menu-link
  @apply flex flex-col px-2 pt-2 pb-3 space-y-1 sm:px-3

.header-link
  @apply text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-blue-500 hover:bg-opacity-75 align-middle w-full

.active
  @apply text-yellow-500 

.user-actions
  @apply  block px-4 py-2 text-sm text-gray-700 
  @screen sm
    @apply py-0 ml-4 px-0 justify-end

.user-action-link
  @apply py-1 px-3 block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-500 w-full
  a
    @apply  block p-1 -mt-1
    &:hover
      @apply text-blue-800 bg-gray-400 rounded

.user-avatar
  @apply h-10 w-10 object-cover rounded-full border-2 border-blue-700 block
  @screen sm
    @apply h-8 w-8 
  @screen xl
    @apply border-gray-300

.user-name
  @apply  ml-4 font-semibold text-gray-200
  @screen sm
    @apply hidden


.profile-dropdown-link
  @apply block px-4 py-2 text-sm text-gray-700
  &:hover
    @apply bg-blue-50 text-blue-800

.headness
  @apply  max-w-7xl mx-auto bg-blue-900 px-4 sm:px-6 lg:px-8


.mobile-dropdown-links
  @apply  border-transparent text-gray-500 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-700 block px-3 pr-4 py-2 border-l-4 text-base font-medium mr-8 rounded

